--- a/Livraria.Blazor/Components/Layout/MainLayout.razor
+++ b/Livraria.Blazor/Components/Layout/MainLayout.razor
@@ -19,6 +19,9 @@
             <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
         </div>
     </FluentFooter>
+    <!-- Set the default theme -->
+    <script src="_content/Microsoft.FluentUI.AspNetCore.Components/js/loading-theme.js" type="text/javascript"></script>
+    <loading-theme storage-name="theme"></loading-theme>
 </FluentLayout>
 
 <div id="blazor-error-ui">
@@ -26,3 +29,4 @@
     <a href="" class="reload">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
+
